--- a/app/elements/promotion-card/promotion-card.html
+++ b/app/elements/promotion-card/promotion-card.html
@@ -77,7 +77,7 @@
       
       <tr id='card'><td hidden>{{item.school_id}}</td>
       <td>
-      <promotion-item-card schoolid="{{item.school_id}}" admissionno="{{item.admission_no}}" studentname="{{item.student_name}}" grade="{{item.class_for_admission}}" flag="{{item.flag}}"></promotion-item-card>
+      <promotion-item-card schoolid="{{item.school_id}}" admissionid="{{item.admissionid}}" admissionno="{{item.admission_no}}" studentname="{{item.student_name}}" grade="{{item.class_for_admission}}" flag="{{item.flag}}" dflag="{{item.dflag}}"></promotion-item-card>
       </td>
       <td><img src='../../images/login.png' style="width: 80px; height: 70px;" ></td>
       <td>{{item.admission_no}}</td><td>{{item.student_name}}</td>
