--- a/app/elements/followup-service/followup-service.html
+++ b/app/elements/followup-service/followup-service.html
@@ -930,6 +930,7 @@ document.querySelector('followup-student-detail').followid=res[0].id;
             resultarrS.push(obj);
          }
          // alert(JSON.stringify(resultarrS));
+         // alert(document.querySelector('followup-student-detail'));
         document.querySelector('followup-student-detail').followupdetailarr=resultarrS;
         //document.querySelector('followup-listitem-card').ready();
 
