--- a/app/elements/feereceipt-card/feereceipt-card.html
+++ b/app/elements/feereceipt-card/feereceipt-card.html
@@ -30,6 +30,7 @@
       <h4 style="margin-left: 300px;">FEE&nbsp;&nbsp;{{receipttype}}</h4><br>
       <table id="table">
         <tr hidden$="{{hidereceipt}}"><td style="text-align: left;">Receipt No: {{receiptno}}</td><td style="text-align: left;"></td><td colspan="4"></td><td style="text-align: right;">Receipt Date: {{paiddate}}</td><td style="text-align: left;"></td></tr>
+        <tr hidden$="{{hidecurrreceipt}}"><td style="text-align: left;">Receipt No: {{ackno}}</td><td style="text-align: left;"></td><td colspan="4"></td><td style="text-align: right;">Receipt Date: {{receiveddate}}</td><td style="text-align: left;"></td></tr>
 
         <tr hidden$="{{hideack}}"><td style="text-align: left;">Acknowledgement No: {{ackno}}</td><td style="text-align: left;"></td><td colspan="4"></td>
         <td style="text-align: right;" hidden$="{{hideack}}">Acknowledgement Date: {{receiveddate}}</td><td style="text-align: left;"></td>
