preapps fix & day report

--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -226,6 +226,11 @@
               <tp-realisation-card></tp-realisation-card>
             </div>
           </section>
+          <section data-category="daycollection-report">
+            <div class="col-md-12">
+              <daycollection-report></daycollection-report>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
