--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -234,3 +234,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="tp-realisation-service/tp-realisation-service.html">
 <link rel="import" href="rte-realisation-itemcard/rte-realisation-itemcard.html">
 <link rel="import" href="tp-realisation-itemcard/tp-realisation-itemcard.html">
+<link rel="import" href="daycollection-report/daycollection-report.html">
