--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -436,6 +436,7 @@
         document.querySelector('pendingfee-report').gradearr=gradearr;
         document.querySelector('gradewise-fee-structure-report').gradearr=gradearr;
         document.querySelector('enrollment-report').gradearr=gradearr;
+        document.querySelector('daycollection-report').gradearr=gradearr;
       },
       fetchgradeService:function(){       
         this.fetchgradeurl=sessionStorage.getItem("addrinfo")+"/fetchgrade-service"
